--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.ocr">
+    <uses-permission android:name="android.permission.INTERNET"/>
    <application
         android:label="ocr"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/flutter_launcher_icons">
         <activity
             android:name=".MainActivity"
             android:exported="true"
