--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,13 @@ dependencies:
   camera:
   path_provider:
   path:
+  flutter_launcher_icons: "^0.9.3"
+  image_picker: ^0.8.5+3
+
+flutter_icons:
+  android: "flutter_launcher_icons"
+  ios: true
+  image_path: "assets/icon.png"
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
