--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   path:
   flutter_launcher_icons: "^0.9.3"
   image_picker: ^0.8.5+3
+  progress_hud: ^1.1.0
 
 flutter_icons:
   android: "flutter_launcher_icons"
