--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_launcher_icons: "^0.9.3"
   image_picker: ^0.8.5+3
   progress_hud: ^1.1.0
+  flutter_native_image: ^0.0.6+1
 
 flutter_icons:
   android: "flutter_launcher_icons"
