--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   image_picker: ^0.8.5+3
   progress_hud: ^1.1.0
   flutter_native_image: ^0.0.6+1
+  flutter_spinkit: ^5.1.0
 
 flutter_icons:
   android: "flutter_launcher_icons"
