--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   progress_hud: ^1.1.0
   flutter_native_image: ^0.0.6+1
   flutter_spinkit: ^5.1.0
+  get: ^4.6.5
+  dio: ^4.0.6
+  http_parser: ^4.0.1
 
 flutter_icons:
   android: "flutter_launcher_icons"
