--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   get: ^4.6.5
   dio: ^4.0.6
   http_parser: ^4.0.1
+  fluttertoast: ^8.0.9
+  motion_toast: ^2.2.1
 
 flutter_icons:
   android: "flutter_launcher_icons"
